# photo_mapper

./: .gitconfig  .gitignore  00_photomapper.ipynb  README.md  _quarto.yml  index.html  index.ipynb  photomapper.html  pyproject.toml  robots.txt  search.json  settings.ini  sidebar.yml  sitemap.xml
photomapper/: _modidx.py  photomapper.py
